--- a/cluster/minikube/apps/nginx-app/kustomization.yaml
+++ b/cluster/minikube/apps/nginx-app/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-- gotk-components.yaml
-- gotk-sync.yaml
-- apps.yaml
+  - deployment.yaml
+  - service.yaml
+
+namespace: nginx-app 
